починил тесты, мда как всегда найс код

--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons.yml
@@ -5,6 +5,11 @@
   abstract: true
   components:
     - type: CombatMode
+      combatToggleAction:
+        enabled: false
+        autoPopulate: false
+        name: action-name-combat
+    - type: Actions
     - type: Cannon
     - type: ContainerContainer
       containers:
