--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons.yml
@@ -29,6 +29,9 @@
         path: /Audio/Effects/double_beep.ogg
     - type: Damageable
       damageContainer: Inorganic
+    - type: SignalReceiver
+      inputs:
+        CannonConsoleReceiver: [ ]
 
 - type: entity
   id: ShipEventCannonBallistic
