--- a/Resources/Prototypes/MachineLinking/receiver_ports.yml
+++ b/Resources/Prototypes/MachineLinking/receiver_ports.yml
@@ -67,3 +67,8 @@
   id: ArtifactAnalyzerReceiver
   name: signal-port-name-artifact-analyzer-receiver
   description: signal-port-description-artifact-analyzer-receiver
+
+- type: receiverPort
+  id: CannonConsoleReceiver
+  name: signal-port-name-artifact-analyzer-receiver
+  description: signal-port-description-artifact-analyzer-receiver
