--- a/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
@@ -35,4 +35,4 @@
       visuals:
         - type: ComputerVisualizer
           key: generic_key
-          screen: shuttle
+          screen: comm_syndie
