--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -1,4 +1,4 @@
-﻿defaultWindowTitle: Space Station 14 - Corvax Station [RU]
+﻿defaultWindowTitle: Space Station 14 - Theta Station [RU]
 windowIconSet: /Textures/Logo/icon
 splashLogo: /Textures/Logo/logo-ru.png
 
