--- a/Resources/Prototypes/Entities/Theta/ShipEvent/closets.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/closets.yml
@@ -12,17 +12,7 @@
           state_closed: bomb_door
 
 - type: entity
-  name: SAW Closet
-  id: SawGunCloset
-  parent: ShipEventCloset
-  components:
-    - type: StorageFill
-      contents:
-        - id: WeaponLightMachineGunL6Event
-          amount: 7
-
-- type: entity
-  name: SAW Ammo Closet
+  name: Rocket Ammo Closet
   id: SawAmmoGunCloset
   parent: ShipEventCloset
   components:
@@ -30,14 +20,3 @@
       contents:
         - id: MagazineLightRifleBoxEvent
           amount: 10
-
-- type: entity
-  name: RPG Closet
-  id: LauncherGunCloset
-  parent: ShipEventCloset
-  suffix: SHIPEVENT
-  components:
-    - type: StorageFill
-      contents:
-        - id: WeaponLauncherRocketEvent
-          amount: 7
