--- a/Resources/Prototypes/Entities/Theta/ShipEvent/closets.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/closets.yml
@@ -23,7 +23,7 @@
 
 - type: entity
   name: Shotgun Ammo Closet
-  id: SawAmmoGunCloset
+  id: ShotgunAmmoGunCloset
   parent: ShipEventCloset
   components:
     - type: StorageFill
