--- a/Resources/Prototypes/Entities/Theta/ShipEvent/human.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/human.yml
@@ -9,33 +9,6 @@
       prototype: ShipTestEventStandard
       prototypes: [ShipTestEventStandard]
     - type: UsePlayerNameForEntityName
-    - type: MovedByPressure
-      enabled: false
-    - type: Damageable
-      damageModifierSet: Immortal
-    - type: ExplosionResistance
-      damageCoefficient: 0.0
-    - type: Barotrauma #no space damage.
-      damage:
-        types:
-          Blunt: 0
-    - type: Bloodstream
-      maxBleedAmount: 0
-      bloodReagent: Milk
-      bloodlossDamage: #no bloodloss damage. overriding base components
-        types:
-          Bloodloss: 0
-      bloodlossHealDamage:
-        types:
-          Bloodloss: 0
-    - type: Respirator
-      damage:
-        types:
-          Asphyxiation: 0
-      damageRecovery:
-        types:
-          Asphyxiation: 0
-      suffocationThreshold: -100000
     - type: ShipEventFaction
     - type: ShipEventFactionView
       toggle:
@@ -76,8 +49,16 @@
     jumpsuit: ClothingUniformJumpsuitOperative
     back: ClothingBackpackDuffelSyndicateOperative
     shoes: ClothingShoesBootsMagAdv
-  innerclothingskirt: ClothingUniformJumpsuitOperative
+    mask: ClothingMaskGasSyndicate
+    # eyes: Night Vision Goggles whenever they're made
+    eyes: ClothingEyesGlassesMeson
+    ears: ClothingHeadsetAltSyndicate
+    gloves: ClothingHandsGlovesCombat
+    outerClothing: ClothingOuterHardsuitSyndie
+    id: AgentIDCard
+    pocket1: ExtendedEmergencyOxygenTankFilled
+    pocket2: BaseUplinkRadio40TC
+    belt: ClothingBeltMilitaryWebbing
+  innerclothingskirt: ClothingUniformJumpskirtOperative
   satchel: ClothingBackpackDuffelSyndicateOperative
   duffelbag: ClothingBackpackDuffelSyndicateOperative
-  inhand:
-    right hand: PocketRadar
