--- a/Resources/Prototypes/game_presets.yml
+++ b/Resources/Prototypes/game_presets.yml
@@ -119,3 +119,13 @@
   rules:
     - Pirates
     - BasicStationEventScheduler
+
+- type: gamePreset
+  id: ShipBattle
+  alias:
+    - shipevent
+    - shiptest
+  name: shipevent-title
+  description: shipevent-desc
+  rules:
+    - ShipEvent
