--- a/.github/workflows/upstream-sync.yml
+++ b/.github/workflows/upstream-sync.yml
@@ -80,5 +80,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           source_branch: ${{ env.UPDATE_BRANCH }}
           destination_branch: ${{ steps.main.outputs.current_branch }}
-          pr_title: "Update from template"
-          pr_body: "An automated PR to sync changes from the template into this repo"
+          pr_title: "Pull SS14 RU upstream to Theta"
+          pr_body: "An automated PR to sync changes from the SS14 RU into this repo"
