гильзы не остаются

--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/shotgun.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/shotgun.yml
@@ -76,6 +76,7 @@
     proto: PelletShotgunSlugEvent
     count: 5
     spread: 30
+    deleteOnSpawn: true
 
 - type: entity
   id: PelletShotgunSlugEvent
