--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
@@ -76,6 +76,7 @@
   components:
   - type: CartridgeAmmo
     proto: LightRifleBulletExplosive
+    deleteOnSpawn: true
 
 - type: entity
   id: LightRifleBulletExplosive
