--- a/Resources/Prototypes/Entities/Theta/ShipEvent/items.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/items.yml
@@ -1,27 +1,35 @@
-﻿- type: entity
-  name: pocket radar
-  description: Helps to fight without voice chat
+﻿- type: Tag
+  id: TurretAmmoContainer
+
+- type: entity
+  id: TurretAmmoContainerRegular
+  name: ammo container
   parent: BaseItem
-  id: PocketRadar
-  suffix: SHIPEVENT
+  components:
+    - type: Tag
+      tags:
+      - TurretAmmoContainer
+    - type: Sprite
+      drawdepth: Items
+      sprite: Theta/ShipEvent/Objects/AmmoContainer.rsi
+      state: container
+    - type: Storage
+      capacity: 100
+      whitelist:
+        components:
+        - Ammo
+
+- type: entity
+  id: TurretAmmoContainerBluespace
+  name: bluespace ammo container
+  parent: TurretAmmoContainerRegular
   components:
     - type: Sprite
-      sprite: Objects/Devices/gps.rsi
-      netsync: false
-      layers:
-        - state: icon
-        - state: active
-    - type: Item
-      sprite: Objects/Devices/gps.rsi
-    - type: RadarConsole
-      maxRange: 150
-    - type: ActivatableUI
-      key: enum.RadarConsoleUiKey.Key
-      inHandsOnly: true
-      singleUser: true
-      requireHands: false
-      closeOnHandDeselect: false
-    - type: UserInterface
-      interfaces:
-        - key: enum.RadarConsoleUiKey.Key
-          type: RadarConsoleBoundUserInterface
+      drawdepth: Items
+      sprite: Theta/ShipEvent/Objects/AmmoContainer.rsi
+      state: container-bluespace
+    - type: Storage
+      capacity: 500
+      whitelist:
+        components:
+        - Ammo
