--- a/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
@@ -50,6 +50,7 @@
   description: shipevent-teamconsole-desc
   components:
     - type: ShipEventFactionMarker
+    - type: TeamConsole
     - type: ActivatableUI
       key: enum.TeamCreationUiKey.Key
     - type: UserInterface
