--- a/Resources/Prototypes/Entities/Theta/ShipEvent/items.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/items.yml
@@ -9,15 +9,24 @@
     - type: Tag
       tags:
       - TurretAmmoContainer
+    - type: Item
+      size: 9999
     - type: Sprite
       drawdepth: Items
       sprite: Theta/ShipEvent/Objects/AmmoContainer.rsi
       state: container
     - type: Storage
       capacity: 100
+      quickInsert: true
+      areaInsert: true
       whitelist:
         components:
         - Ammo
+    - type: Dumpable
+    - type: UserInterface
+      interfaces:
+      - key: enum.StorageUiKey.Key
+        type: StorageBoundUserInterface
 
 - type: entity
   id: TurretAmmoContainerBluespace
