--- a/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
@@ -118,6 +118,9 @@
       drawdepth: Objects
       sprite: Theta/ShipEvent/Structures/Machines/TurretLoader.rsi
       state: loader
+    - type: Appearance
+      visuals:
+      - type: TurretLoaderVisualizer
     - type: Physics
       bodyType: Static
     - type: Fixtures
