--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/shotgun.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/shotgun.yml
@@ -1,107 +1,37 @@
 ﻿- type: entity
   id: ShipEventShotgunCannon
   parent: ShipEventCannon
-  name: shotgun cannon
-  description: A ballistic machine gun auto-turret.
   components:
-  - type: Sprite
-    layers:
-      - state: syndie_lethal
-  - type: Destructible
-    thresholds:
-      - trigger:
-          !type:DamageTrigger
-          damage: 300
-        behaviors:
-          - !type:DoActsBehavior
-            acts: [ "Destruction" ]
-          - !type:PlaySoundBehavior
-            sound:
-              path: /Audio/Effects/metalbreak.ogg
-          - !type:SpawnEntitiesBehavior
-            spawn:
-              SheetSteel1:
-                min: 3
-                max: 5
-  - type: Gun
-    fireRate: 2
-    projectileSpeed: 50
-    selectedMode: FullAuto
-    availableModes:
-      - FullAuto
-    soundGunshot:
-      path: /Audio/Weapons/Guns/Gunshots/shotgun.ogg
-    soundEmpty:
-      path: /Audio/Weapons/Guns/Empty/empty.ogg
-  - type: ChamberMagazineAmmoProvider
-  - type: ContainerContainer
-    containers:
-      gun_magazine: !type:ContainerSlot
-      gun_chamber: !type:ContainerSlot
-  - type: ItemSlots
-    slots:
-      gun_magazine:
-        name: Magazine
-        startingItem: MagazineShotgunShipEvent
-        insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
-        ejectSound: /Audio/Weapons/Guns/MagOut/batrifle_magout.ogg
-        priority: 2
-        whitelist:
-          tags:
-            - MagazineShotgun
-
-- type: entity
-  id: MagazineShotgunShipEvent
-  name: cannon shotgun magazine (slug)
-  parent: BaseMagazineShotgun
-  suffix: SHIPEVENT
-  components:
-    - type: BallisticAmmoProvider
-      proto: ShellShotgunSlugEvent
-      capacity: 100
+    - type: Cannon
+      ammoPrototypes:
+        - "ShellShotgunSlugShipEvent"
     - type: Sprite
       layers:
-        - state: pellets
-          map: ["enum.GunVisualLayers.Base"]
-        - state: mag-1
-          map: ["enum.GunVisualLayers.Mag"]
-
-- type: entity
-  id: ShellShotgunSlugEvent
-  name: shell (.50 slug)
-  parent: ShellShotgunSlug
-  suffix: SHIPEVENT
-  components:
-  - type: CartridgeAmmo
-    proto: PelletShotgunSlugEvent
-    count: 5
-    spread: 30
-    deleteOnSpawn: true
-
-- type: entity
-  id: PelletShotgunSlugEvent
-  name: pellet (.50 slug)
-  noSpawn: true
-  parent: PelletShotgunSlug
-  suffix: SHIPEVENT
-  components:
-  - type: Projectile
-    damage:
-      types:
-        Piercing: 100
-
-- type: entity
-  id: MagazineShotgunIncendiaryShipEvent
-  name: cannon shotgun magazine (incendiary)
-  parent: BaseMagazineShotgun
-  suffix: SHIPEVENT
-  components:
-  - type: BallisticAmmoProvider
-    proto: ShellShotgunIncendiary
-    capacity: 100
-  - type: Sprite
-    layers:
-      - state: pellets
-        map: ["enum.GunVisualLayers.Base"]
-      - state: mag-1
-        map: ["enum.GunVisualLayers.Mag"]
+        - state: syndie_lethal
+    - type: Destructible
+      thresholds:
+        - trigger:
+            !type:DamageTrigger
+            damage: 300
+          behaviors:
+            - !type:DoActsBehavior
+              acts: [ "Destruction" ]
+            - !type:PlaySoundBehavior
+              sound:
+                path: /Audio/Effects/metalbreak.ogg
+            - !type:SpawnEntitiesBehavior
+              spawn:
+                SheetSteel1:
+                  min: 3
+                  max: 5
+    - type: Gun
+      minAngle: 4
+      maxAngle: 20
+      angleIncrease: 4
+      angleDecay: 16
+      fireRate: 4
+      projectileSpeed: 50
+      selectedMode: FullAuto
+      availableModes:
+        - FullAuto
+      soundGunshot: /Audio/Weapons/Guns/Gunshots/gun_sentry.ogg
