--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
@@ -1,9 +1,10 @@
 ﻿- type: entity
   id: ShipEventRocketCannon
   parent: ShipEventCannon
-  name: rocket cannon
-  description: A ballistic machine gun auto-turret.
   components:
+  - type: Cannon
+    ammoPrototypes:
+      - "CartridgeRocket"
   - type: Sprite
     layers:
       - state: syndie_lethal
@@ -34,44 +35,3 @@
     availableModes:
       - FullAuto
     soundGunshot: /Audio/Weapons/Guns/Gunshots/gun_sentry.ogg
-
-- type: entity
-  id: MagazineLightRifleBoxEvent
-  name: rocket cannon magazine box
-  suffix: SHIPEVENT
-  parent: MagazineLightRifleBox
-  components:
-  - type: BallisticAmmoProvider
-    proto: CartridgeLightRifleExplosive
-    capacity: 100
-
-- type: entity
-  id: CartridgeLightRifleExplosive
-  name: cartridge (explosive)
-  parent: CartridgeLightRifle
-  suffix: SHIPEVENT
-  components:
-  - type: CartridgeAmmo
-    proto: LightRifleBulletExplosive
-    deleteOnSpawn: true
-
-- type: entity
-  id: LightRifleBulletExplosive
-  name: bullet
-  parent: BaseBulletTrigger
-  suffix: SHIPEVENT
-  components:
-    - type: Sprite
-      sprite: Objects/Weapons/Guns/Projectiles/projectiles2.rsi
-      layers:
-        - state: frag
-    - type: ExplodeOnTrigger
-    - type: Explosive
-      explosionType: Default
-      totalIntensity: 25
-      maxIntensity: 5
-      maxTileBreak: 1
-    - type: PointLight
-      radius: 3.5
-      color: orange
-      energy: 0.5
