--- a/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
@@ -173,8 +173,7 @@
             - TurretAmmoContainer
     - type: ContainerContainer
       containers:
-        ammoContainer: !type:ContainerSlot
-          ents: [ ]
+        ammoContainer: !type:ContainerSlot { }
     - type: TurretLoader
     - type: SignalTransmitter
       outputs:
