--- a/Resources/Maps/Shuttles/shiptest-infiltrator.yml
+++ b/Resources/Maps/Shuttles/shiptest-infiltrator.yml
@@ -70,7 +70,7 @@ entities:
           0: 65535
         -1,-1:
           0: 61439
-          6: 4096
+          1: 4096
         0,-4:
           0: 65535
         0,-3:
@@ -81,57 +81,57 @@ entities:
           0: 65535
         1,-4:
           0: 30591
-          6: 34816
+          1: 34816
         1,-3:
           0: 21879
-          6: 43656
+          1: 43656
         1,-2:
           0: 30581
-          6: 34954
+          1: 34954
         1,-1:
           0: 55
-          6: 7624
+          1: 7624
         0,-5:
           0: 61951
           2: 3584
         1,-5:
           0: 65399
-          6: 8
+          1: 8
         -1,-5:
           0: 64767
-          1: 256
+          3: 256
           2: 512
         -3,-4:
           0: 12
-          6: 52224
+          1: 52224
         -2,-4:
           0: 61439
-          6: 4096
+          1: 4096
         -2,-2:
           0: 65516
-          6: 19
+          1: 19
         -2,-1:
           0: 2287
-          6: 50448
+          1: 50448
         -2,-3:
           0: 35054
-          6: 30481
+          1: 30481
         -1,0:
           0: 8
-          6: 135
+          1: 135
         -3,-5:
           0: 52224
-          6: 12
+          1: 12
         -2,-8:
           0: 65504
-          6: 16
+          1: 16
         -2,-7:
           0: 65535
         -2,-6:
           0: 65535
         -2,-5:
           0: 63487
-          1: 2048
+          3: 2048
         -1,-8:
           0: 65526
         -1,-7:
@@ -142,61 +142,61 @@ entities:
           0: 65523
         0,-7:
           0: 61303
-          3: 4096
-          4: 136
+          4: 4096
+          5: 136
         0,-6:
-          3: 1
+          4: 1
           0: 65534
         1,-8:
           0: 30512
-          6: 35008
+          1: 35008
         1,-7:
           0: 30549
-          5: 34
-          6: 34952
+          6: 34
+          1: 34952
         1,-6:
           0: 30583
-          6: 34952
+          1: 34952
         -1,-9:
           0: 26112
         0,-9:
           0: 13056
         2,-4:
           0: 1
-          6: 4352
+          1: 4352
         2,-5:
           0: 4352
-          6: 1
+          1: 1
         -3,-3:
-          6: 61164
+          1: 61164
         -3,-2:
-          6: 61132
+          1: 61132
         -3,-1:
-          6: 3278
+          1: 3278
         2,-3:
-          6: 13105
+          1: 13105
         2,-2:
-          6: 13073
+          1: 13073
         2,-1:
-          6: 275
+          1: 275
         -2,0:
-          6: 12
+          1: 12
         -3,-8:
-          6: 52416
+          1: 52416
         -3,-7:
-          6: 52974
+          1: 52974
         -3,-6:
-          6: 52974
+          1: 52974
         2,-8:
-          6: 4368
+          1: 4368
         2,-7:
-          6: 4915
+          1: 4915
         2,-6:
-          6: 4915
+          1: 4915
         0,0:
-          6: 15
+          1: 15
         1,0:
-          6: 1
+          1: 1
       uniqueMixes:
       - volume: 2500
         temperature: 293.15
@@ -216,8 +216,8 @@ entities:
       - volume: 2500
         temperature: 293.15
         moles:
-        - 19.481253
-        - 73.28662
+        - 0
+        - 0
         - 0
         - 0
         - 0
@@ -233,6 +233,21 @@ entities:
         moles:
         - 20.04244
         - 75.39776
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+      - volume: 2500
+        temperature: 293.15
+        moles:
+        - 19.481253
+        - 73.28662
         - 0
         - 0
         - 0
@@ -288,21 +303,6 @@ entities:
         - 0
         - 0
         - 0
-      - volume: 2500
-        temperature: 293.15
-        moles:
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
       chunkSize: 4
     type: GridAtmosphere
   - chunkCollection:
@@ -315,17 +315,10 @@ entities:
         decals:
           6: -5,-17
       - node:
-          angle: 3.141592653589793 rad
           color: '#FFFFFFFF'
           id: Arrows
         decals:
-          7: -5,-16
-          8: 3,-16
-      - node:
-          color: '#FFFFFFFF'
-          id: Arrows
-        decals:
-          9: -1,-22
+          7: -1,-22
       - node:
           angle: 1.5707963267948966 rad
           color: '#FFFFFFFF'
@@ -333,39 +326,37 @@ entities:
         decals:
           5: 3,-17
       - node:
-          color: '#DE3A3A96'
-          id: HalfTileOverlayGreyscale
+          color: '#79150096'
+          id: BrickTileWhiteCornerNe
         decals:
-          13: 4,-20
-          14: 3,-20
-          15: 2,-20
-          16: 1,-20
-          17: 0,-20
-          18: -1,-20
-          19: -2,-20
-          20: 0,-16
-          21: -1,-16
-          22: -2,-16
-          29: 1,-12
+          15: 4,-20
       - node:
-          color: '#DE3A3A96'
-          id: HalfTileOverlayGreyscale270
+          color: '#79150096'
+          id: BrickTileWhiteLineE
         decals:
-          23: -2,-9
-          24: -2,-10
-          25: -2,-11
+          16: 4,-21
+          17: 4,-22
       - node:
-          color: '#DE3A3A96'
-          id: HalfTileOverlayGreyscale90
+          color: '#79150096'
+          id: BrickTileWhiteLineN
         decals:
-          26: 0,-11
-          27: 0,-10
-          28: 0,-9
+          10: -1,-16
+          11: -2,-16
+          12: 0,-16
+          18: 3,-20
+          19: 2,-20
+          20: 1,-20
+          21: 0,-20
+          22: -1,-20
+          23: -2,-20
       - node:
-          color: '#DE3A3A96'
-          id: QuarterTileOverlayGreyscale90
+          color: '#79150096'
+          id: DeliveryGreyscale
         decals:
-          30: 0,-12
+          8: -3,-6
+          9: 1,-6
+          13: -2,-10
+          14: 0,-10
       - node:
           color: '#FFFFFFFF'
           id: StandClear
@@ -380,13 +371,6 @@ entities:
           0: -4,-22
           1: -4,-21
           2: -4,-20
-      - node:
-          color: '#FFFFFFFF'
-          id: WarningLine
-        decals:
-          10: -2,-16
-          11: -1,-16
-          12: 0,-16
     type: DecalGrid
   - type: OccluderTree
   - type: Shuttle
@@ -1552,11 +1536,9 @@ entities:
     parent: 1
     type: Transform
 - uid: 183
-  type: VendingMachineYouTool
+  type: ShotgunAmmoClosetShipEvent
   components:
-  - flags: SessionSpecific
-    type: MetaData
-  - pos: -1.5,-15.5
+  - pos: 0.5,-15.5
     parent: 1
     type: Transform
 - uid: 184
@@ -1569,9 +1551,9 @@ entities:
   - bodyType: Static
     type: Physics
 - uid: 185
-  type: TableReinforced
+  type: RocketAmmoClosetShipEvent
   components:
-  - pos: 2.5,-15.5
+  - pos: -3.5,-15.5
     parent: 1
     type: Transform
 - uid: 186
@@ -1600,9 +1582,9 @@ entities:
   - bodyType: Static
     type: Physics
 - uid: 189
-  type: YellowOxygenTankFilled
+  type: SheetSteel
   components:
-  - pos: -3.589096,-15.409599
+  - pos: 5.5,-24.5
     parent: 1
     type: Transform
 - uid: 190
@@ -1825,9 +1807,9 @@ entities:
     parent: 1
     type: Transform
 - uid: 221
-  type: TableReinforced
+  type: SheetSteel
   components:
-  - pos: -3.5,-15.5
+  - pos: 5.5,-24.5
     parent: 1
     type: Transform
 - uid: 222
@@ -2866,9 +2848,9 @@ entities:
     parent: 1
     type: Transform
 - uid: 376
-  type: TableReinforced
+  type: ShotgunAmmoClosetShipEvent
   components:
-  - pos: -2.5,-15.5
+  - pos: -1.5,-6.5
     parent: 1
     type: Transform
 - uid: 377
@@ -4571,29 +4553,34 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 900
+      - port: TurretLoaderSender
+        uid: 914
     type: SignalReceiver
 - uid: 564
-  type: DoubleEmergencyOxygenTankFilled
+  type: Rack
   components:
-  - pos: -3.010971,-15.440882
+  - rot: 3.141592653589793 rad
+    pos: 5.5,-24.5
     parent: 1
     type: Transform
 - uid: 565
-  type: NitrogenTankFilled
+  type: VendingMachineYouTool
   components:
-  - pos: -2.542221,-15.487804
+  - flags: SessionSpecific
+    type: MetaData
+  - pos: -3.5,-23.5
     parent: 1
     type: Transform
 - uid: 566
-  type: TableReinforced
+  type: ShotgunAmmoClosetShipEvent
   components:
   - pos: 1.5,-15.5
     parent: 1
     type: Transform
 - uid: 567
-  type: DoubleEmergencyOxygenTankFilled
+  type: RocketAmmoClosetShipEvent
   components:
-  - pos: 2.129654,-15.440882
+  - pos: -1.5,-15.5
     parent: 1
     type: Transform
 - uid: 568
@@ -4605,15 +4592,15 @@ entities:
   - enabled: True
     type: AmbientSound
 - uid: 569
-  type: YellowOxygenTankFilled
+  type: ShotgunAmmoClosetShipEvent
   components:
-  - pos: 1.473404,-15.409599
+  - pos: 2.5,-15.5
     parent: 1
     type: Transform
 - uid: 570
-  type: NitrogenTankFilled
+  type: RocketAmmoClosetShipEvent
   components:
-  - pos: 2.598404,-15.519087
+  - pos: -2.5,-15.5
     parent: 1
     type: Transform
 - uid: 571
@@ -4741,6 +4728,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 900
+      - port: TurretLoaderSender
+        uid: 916
     type: SignalReceiver
 - uid: 590
   type: WallPlastitanium
@@ -5032,7 +5021,7 @@ entities:
 - uid: 634
   type: Multitool
   components:
-  - pos: -6.6426735,-22.402021
+  - pos: -6.5307503,-22.24257
     parent: 1
     type: Transform
 - uid: 635
@@ -5611,6 +5600,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 561
+      - port: TurretLoaderSender
+        uid: 930
     type: SignalReceiver
 - uid: 719
   type: AMEShielding
@@ -5637,6 +5628,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 561
+      - port: TurretLoaderSender
+        uid: 934
     type: SignalReceiver
 - uid: 722
   type: AMEController
@@ -6841,6 +6834,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 901
+      - port: TurretLoaderSender
+        uid: 920
     type: SignalReceiver
 - uid: 891
   type: PlasmaReinforcedWindowDirectional
@@ -6890,6 +6885,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 901
+      - port: TurretLoaderSender
+        uid: 922
     type: SignalReceiver
 - uid: 897
   type: PlasmaReinforcedWindowDirectional
@@ -6969,8 +6966,8 @@ entities:
 - uid: 904
   type: ChairPilotSeat
   components:
-  - rot: 1.5707963267948966 rad
-    pos: -5.5,-9.5
+  - rot: 3.141592653589793 rad
+    pos: 4.5,-9.5
     parent: 1
     type: Transform
   - bodyType: Static
@@ -6978,8 +6975,8 @@ entities:
 - uid: 905
   type: ChairPilotSeat
   components:
-  - rot: -1.5707963267948966 rad
-    pos: 4.5,-9.5
+  - rot: 3.141592653589793 rad
+    pos: -5.5,-9.5
     parent: 1
     type: Transform
   - bodyType: Static
@@ -6997,6 +6994,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 900
+      - port: TurretLoaderSender
+        uid: 918
     type: SignalReceiver
 - uid: 907
   type: ShipEventRocketCannon
@@ -7011,6 +7010,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 900
+      - port: TurretLoaderSender
+        uid: 912
     type: SignalReceiver
 - uid: 908
   type: ShipEventRocketCannon
@@ -7025,6 +7026,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 901
+      - port: TurretLoaderSender
+        uid: 924
     type: SignalReceiver
 - uid: 909
   type: ShipEventRocketCannon
@@ -7039,6 +7042,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 901
+      - port: TurretLoaderSender
+        uid: 926
     type: SignalReceiver
 - uid: 910
   type: ShipEventShotgunCannon
@@ -7053,6 +7058,8 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 561
+      - port: TurretLoaderSender
+        uid: 932
     type: SignalReceiver
 - uid: 911
   type: ShipEventShotgunCannon
@@ -7067,5 +7074,233 @@ entities:
       CannonConsoleReceiver:
       - port: CannonConsoleSender
         uid: 561
+      - port: TurretLoaderSender
+        uid: 928
     type: SignalReceiver
+- uid: 912
+  type: TurretLoaderShipEvent
+  components:
+  - pos: -4.5,-17.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 907
+    type: SignalTransmitter
+- uid: 914
+  type: TurretLoaderShipEvent
+  components:
+  - pos: -3.5,-17.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 563
+    type: SignalTransmitter
+- uid: 916
+  type: TurretLoaderShipEvent
+  components:
+  - pos: -2.5,-17.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 589
+    type: SignalTransmitter
+- uid: 918
+  type: TurretLoaderShipEvent
+  components:
+  - pos: -1.5,-18.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 906
+    type: SignalTransmitter
+- uid: 920
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 0.5,-18.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 890
+    type: SignalTransmitter
+- uid: 922
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 1.5,-17.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 896
+    type: SignalTransmitter
+- uid: 924
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 2.5,-17.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 908
+    type: SignalTransmitter
+- uid: 926
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 3.5,-17.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 909
+    type: SignalTransmitter
+- uid: 928
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 0.5,-6.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 911
+    type: SignalTransmitter
+- uid: 930
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 1.5,-6.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 718
+    type: SignalTransmitter
+- uid: 932
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 1.5,-3.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 910
+    type: SignalTransmitter
+- uid: 934
+  type: TurretLoaderShipEvent
+  components:
+  - pos: 1.5,-4.5
+    parent: 1
+    type: Transform
+  - outputs:
+      TurretLoaderSender:
+      - port: CannonConsoleReceiver
+        uid: 721
+    type: SignalTransmitter
+- uid: 936
+  type: SheetSteel
+  components:
+  - pos: 5.5,-24.5
+    parent: 1
+    type: Transform
+- uid: 937
+  type: SheetPlasteel
+  components:
+  - pos: 5.5,-24.5
+    parent: 1
+    type: Transform
+- uid: 938
+  type: SheetRPGlass
+  components:
+  - pos: 5.5,-24.5
+    parent: 1
+    type: Transform
+- uid: 939
+  type: PoweredSmallLight
+  components:
+  - pos: -4.5,-8.5
+    parent: 1
+    type: Transform
+  - powerLoad: 0
+    type: ApcPowerReceiver
+- uid: 940
+  type: PoweredSmallLight
+  components:
+  - pos: 3.5,-8.5
+    parent: 1
+    type: Transform
+  - powerLoad: 0
+    type: ApcPowerReceiver
+- uid: 941
+  type: PoweredSmallLight
+  components:
+  - rot: -1.5707963267948966 rad
+    pos: 4.5,-12.5
+    parent: 1
+    type: Transform
+  - powerLoad: 0
+    type: ApcPowerReceiver
+- uid: 942
+  type: PoweredSmallLight
+  components:
+  - rot: 1.5707963267948966 rad
+    pos: -5.5,-12.5
+    parent: 1
+    type: Transform
+  - powerLoad: 0
+    type: ApcPowerReceiver
+- uid: 943
+  type: Catwalk
+  components:
+  - rot: 1.5707963267948966 rad
+    pos: -4.5,-13.5
+    parent: 1
+    type: Transform
+- uid: 944
+  type: Catwalk
+  components:
+  - rot: 1.5707963267948966 rad
+    pos: -4.5,-12.5
+    parent: 1
+    type: Transform
+- uid: 945
+  type: Catwalk
+  components:
+  - rot: 1.5707963267948966 rad
+    pos: -5.5,-12.5
+    parent: 1
+    type: Transform
+- uid: 946
+  type: Catwalk
+  components:
+  - rot: 1.5707963267948966 rad
+    pos: 3.5,-13.5
+    parent: 1
+    type: Transform
+- uid: 947
+  type: Catwalk
+  components:
+  - rot: 1.5707963267948966 rad
+    pos: 3.5,-12.5
+    parent: 1
+    type: Transform
+- uid: 948
+  type: Catwalk
+  components:
+  - rot: 1.5707963267948966 rad
+    pos: 4.5,-12.5
+    parent: 1
+    type: Transform
 ...
