--- a/Resources/Maps/Theta/Shipevent/lobby.yml
+++ b/Resources/Maps/Theta/Shipevent/lobby.yml
@@ -138,18 +138,21 @@ entities:
           0: 64991
         0,3:
           0: 30579
+          1: 2188
         1,0:
           0: 28977
         1,1:
           0: 65535
         1,2:
           0: 7167
+          1: 58368
         2,0:
           0: 4096
         2,1:
           0: 13107
         2,2:
           0: 55
+          1: 65472
         1,-1:
           0: 4368
         -4,0:
@@ -160,12 +163,14 @@ entities:
           0: 9983
         -4,3:
           0: 59938
+          1: 16
         -3,0:
           0: 64968
         -3,1:
           0: 65535
         -3,2:
           0: 61183
+          1: 4096
         -3,3:
           0: 65326
         -2,0:
@@ -192,6 +197,7 @@ entities:
           0: 1
         -4,4:
           0: 60074
+          1: 16
         -4,5:
           0: 138
         -3,4:
@@ -212,12 +218,63 @@ entities:
           0: 143
         -5,1:
           0: 8
+        1,3:
+          1: 36671
+        2,3:
+          1: 65535
+        3,2:
+          1: 65534
+        3,3:
+          1: 15
+        3,1:
+          1: 57856
+        1,4:
+          1: 34956
+        1,5:
+          1: 34956
+        1,6:
+          1: 34956
+        1,7:
+          1: 140
+        2,4:
+          1: 65535
+        2,5:
+          1: 65535
+        2,6:
+          1: 65535
+        2,7:
+          1: 639
+        -5,2:
+          1: 128
+        4,1:
+          1: 12544
+        4,2:
+          1: 65523
+        4,3:
+          1: 7
+        5,2:
+          1: 256
       uniqueMixes:
       - volume: 2500
         temperature: 293.15
         moles:
         - 21.824879
         - 82.10312
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+        - 0
+      - volume: 2500
+        temperature: 293.15
+        moles:
+        - 0
+        - 0
         - 0
         - 0
         - 0
@@ -2297,6 +2354,8 @@ entities:
     type: Transform
   - enabled: True
     type: PointLight
+  missingComponents:
+  - Destructible
 - uid: 327
   type: TeamCreationConsoleShipEvent
   components:
@@ -2306,6 +2365,8 @@ entities:
     type: Transform
   - enabled: True
     type: PointLight
+  missingComponents:
+  - Destructible
 - uid: 328
   type: TableReinforced
   components:
@@ -4013,7 +4074,7 @@ entities:
     parent: 1
     type: Transform
 - uid: 556
-  type: SpawnPointAssistant
+  type: SpawnPointAssistantGodmode
   components:
   - pos: 1.5,-0.5
     parent: 1
@@ -4153,13 +4214,13 @@ entities:
 - uid: 579
   type: ReinforcedWindow
   components:
-  - pos: 8.5,26.5
+  - pos: 8.5,25.5
     parent: 1
     type: Transform
 - uid: 580
   type: ReinforcedWindow
   components:
-  - pos: 8.5,25.5
+  - pos: 8.5,26.5
     parent: 1
     type: Transform
 - uid: 581
@@ -4213,7 +4274,7 @@ entities:
 - uid: 589
   type: Firelock
   components:
-  - pos: 8.5,25.5
+  - pos: 8.5,26.5
     parent: 1
     type: Transform
 - uid: 590
@@ -4225,7 +4286,7 @@ entities:
 - uid: 591
   type: Firelock
   components:
-  - pos: 8.5,26.5
+  - pos: 8.5,25.5
     parent: 1
     type: Transform
 - uid: 592
