--- a/Resources/Prototypes/Theta/Shipevent/shipevent.toml
+++ b/Resources/Prototypes/Theta/Shipevent/shipevent.toml
@@ -1,5 +1,7 @@
 ﻿#todo: move this to gamerule prototype (someday)
 
+RoundDuration = 300 #in seconds, set ot negative if you don't want a timed round end
+
 TeamCheckInterval = 5.0 #float, in seconds
 RespawnDelay = 60.0 #float, in seconds
 
