--- a/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/cannons/rocket.yml
@@ -4,7 +4,7 @@
   components:
   - type: Cannon
     ammoPrototypes:
-      - "CartridgeRocket"
+      - "CartridgeRocketShipEvent"
   - type: Sprite
     layers:
       - state: syndie_lethal
