Я забыл поставить лайфтайм для дробыша O_o

--- a/Resources/Prototypes/Entities/Theta/ShipEvent/ammo.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/ammo.yml
@@ -29,6 +29,8 @@
       damage:
         types:
           Piercing: 100
+    - type: TimedDespawn
+      lifetime: 3
 
 - type: entity
   id: ShipEventCloset
