--- a/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
+++ b/Resources/Prototypes/Entities/Theta/ShipEvent/machinery.yml
@@ -36,7 +36,7 @@
   id: ComputerShuttleSyndieShipEvent
   components:
     - type: Anchorable
-      delay: 9999999
+      disabled: true
 
 - type: entity
   id: TeamCreationConsoleShipEvent
