--- a/Resources/Prototypes/Theta/Shipevent/debris.yml
+++ b/Resources/Prototypes/Theta/Shipevent/debris.yml
@@ -1,6 +1,25 @@
-#- type: structure
-#  id: wreck_mapload
-#  generator: !type:MapLoaderGenerator
-#    mapPath: "/Maps/Theta/Shipevent/wreck-1.yml"
-#  spawnWeight: 0.75
-#  minDistance: 15
+- type: structure
+  id: asteroid_small
+  generator: !type:AsteroidGenerator
+    size: 10
+    circleAmount: 3
+    maxCircleRadius: 3
+    minCircleRadius: 1
+    erosion: 0.1
+    floorId: FloorAsteroidSand
+    wallPrototypeId: AsteroidRock
+  spawnWeight: 0.5
+  minDistance: 35
+  
+- type: structure
+  id: asteroid_large
+  generator: !type:AsteroidGenerator
+    size: 30
+    circleAmount: 6
+    maxCircleRadius: 7
+    minCircleRadius: 3
+    erosion: 0.1
+    floorId: FloorAsteroidSand
+    wallPrototypeId: AsteroidRock
+  spawnWeight: 0.5
+  minDistance: 35
