--- a/Resources/Prototypes/Theta/Shipevent/shipevent.yml
+++ b/Resources/Prototypes/Theta/Shipevent/shipevent.yml
@@ -11,7 +11,7 @@
     teamCheckInterval: 5.0
     respawnDelay: 60
     initialObstacleAmount: 150
-    maxSpawnOffset: 500
+    maxSpawnOffset: 1000
     bonusInterval: 600
     pointsPerInterval: 5000
     pointsPerHitMultiplier: 0.01
@@ -23,4 +23,5 @@
       - "/Maps/Shuttles/shiptest-infiltrator.yml"
     
     obstacleTypes:
-      - "wreck_one_ml"
+      - "asteroid_small"
+      - "asteroid_large"
