--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -1,5 +1,5 @@
 ﻿defaultWindowTitle: Space Station 14 - Theta Station [RU]
-windowIconSet: /Textures/Logo/icon-ru # Corvax-Theme
+windowIconSet: /Textures/Logo/icon-theta # Theta
 splashLogo: /Textures/Logo/logo-ru.png # Corvax-Theme
 
 # PJB PLEASE
